Agregado about.html

--- a/about.html
+++ b/about.html
@@ -7,8 +7,10 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>portada</h1>
-        <p>Hola Lu</p>
-        <li><a href="./about.html">Ir a about</a></li>
+        <h1>Portada</h1>
+
+        <nav>
+            <li><a href="./index.html">Ir a inicio</a></li>
+        </nav>
     </body>
 </html>
