--- a/products.html
+++ b/products.html
@@ -7,8 +7,8 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>portada</h1>
-        <p>Hola Lu</p>
+        <h1>Products</h1>
+
         <nav>
             <li><a href="./index.html">Ir a Inicio</a></li>
             <li><a href="./about.html">Ir a about</a></li>
