--- a/about.html
+++ b/about.html
@@ -8,9 +8,10 @@
     </head>
     <body>
         <h1>Portada</h1>
-
         <nav>
-            <li><a href="./index.html">Ir a inicio</a></li>
+            <li><a href="./index.html">Ir a Inicio</a></li>
+            <li><a href="./about.html">Ir a about</a></li>
+            <li><a href="./produts.html">Ir a produts</a></li>
         </nav>
     </body>
 </html>
