--- a/contacts.html
+++ b/contacts.html
@@ -13,6 +13,7 @@
             <li><a href="./index.html">Ir a Inicio</a></li>
             <li><a href="./about.html">Ir a about</a></li>
             <li><a href="./products.html">Ir a produts</a></li>
+            <li><a href="./contacts.html">Ir a contactar</a></li>
         </nav>
     </body>
 </html>
