--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <li><a href="./index.html">Ir a Inicio</a></li>
             <li><a href="./about.html">Ir a about</a></li>
-            <li><a href="./produts.html">Ir a produts</a></li>
+            <li><a href="./products.html">Ir a produts</a></li>
         </nav>
     </body>
 </html>
